# gaussian_splat_engine

./: CMakeLists.txt  LICENÇAS_E_BLOQUEIOS.pptx  README.md
app/: PangolinViewer.cpp  TestCudaRender.cpp
mobiprojeto/: .gitignore  AppFONT.js  app.json  index.js  package-lock.json  package.json  react-native.config.js  tempCodeRunnerFile.javascript
mobiprojeto/android/: build.gradle  gradle.properties  settings.gradle
mobiprojeto/android/app/: BUCK  build.gradle
mobiprojeto/android/app/release/: output-metadata.json
mobiprojeto/html/web.bundle/: loader.html
mobiprojeto/html/web.bundle/site/: index.html
mobiprojeto/ios/: Podfile
mobiprojeto/ios/mobiprojeto/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
mobiprojeto/ios/mobiprojeto.xcodeproj/: project.pbxproj
mobiprojeto/ios/mobiprojetoTests/: mobiprojetoTests.m
mobiprojeto/src/: App.js  AppTest.js  TEMPLATE_AJUDA  TelaCalculadora.js  links_uteis  routes.js
mobiprojeto/src/components/: Button.js  Categorias.js  Celular_colocar.js  ComprasVendas.js  DetalhesProdutos.js  Display.js  EnvioPropostasCompras.js  Estatistica.js  FILTRO_PESQUISA_CATEGORIAS.js  FlatlistTeste.js  IMAGELISTA.js  Importante.js  LicencaExpirada.js  MAPA copy.js  MAPA.js  MapaGoogle.js  MensagensPropostas.js  Menu.js  MirrorApagarDepois.js  PROPRIETARIO.js  Postar.js  ProdutosEtiquetas.js  StatusInfoCompraVenda.js  TERMOS_DE_USO.js  TelaSplash.js  VIDEOLISTA.js  Waiting.js  estilo.js  funcao_teste.js  styledComponents.js
mobiprojeto/src/components/CALCULO_E_FORMATACAO/: FORMATACAO.js
mobiprojeto/src/components/estilos_componentes/: screen_pay_css.js
mobiprojeto/src/components/fotos/: CameraFoto.js  navegacaoFotos.js
mobiprojeto/src/components/layout/: Quadrado.js
mobiprojeto/src/components/pay/: pay_aprovado_reprovado.js  pay_aprovado_reprovado_css.js  pay_credity_card.js  pay_credity_card_css.js  screen_pay.js  screen_pay_css.js  telaAguardeProcessamentoPagamento.js
mobiprojeto/src/components/pay_anuncios/: Tabela_planos.js  tabela_planos_css.js
mobiprojeto/src/components/site/: style.css
mobiprojeto/src/components/videos/: NavegarVideos.js  (+2 more)
mobiprojeto/src/context/: StateContext.js  UsersContext.js
mobiprojeto/src/services/: api.js  apiAxios.js
src/renderer/: CudaWrapper.cu  CudaWrapper.h  GPUBuffer.cuh  GaussianSplatting.cuh  Kernels.cu  Kernels.cuh  Rasterizer.cu  Rasterizer.cuh  RenderState.cuh  Types.cuh
(+12 files in other folders)
